include $(top_srcdir)/config/common.am

info_TEXINFOS = xforms.texi
xforms_TEXINFOS = part0_preface.texi \
				  part1_defining_forms.texi \
				  part1_doing_interaction.texi \
				  part1_free_objects.texi \
				  part1_getting_started.texi \
				  part1_goodies.texi \
				  part1_introduction.texi \
				  part1.texi \
				  part2_command_line.texi \
				  part2_creating_forms.texi \
				  part2_generating_hardcopies.texi \
				  part2_getting_started.texi \
				  part2_introduction.texi \
				  part2_language_filters.texi \
				  part2_saving_loading.texi \
				  part2.texi \
				  part3_buttons.texi \
				  part3_choice_objects.texi \
				  part3_container_objects.texi \
				  part3_deprecated_objects.texi \
				  part3_input_objects.texi \
				  part3_introduction.texi \
				  part3_other_objects.texi \
				  part3_popups.texi \
				  part3_static_objects.texi \
				  part3.texi \
				  part3_valuator_objects.texi \
				  part4_an_example.texi \
				  part4_drawing_objects.texi \
				  part4_events.texi \
				  part4_fl_object.texi \
				  part4_global_structure.texi \
				  part4_introduction.texi \
				  part4_new_buttons.texi \
				  part4_preemptive_handler.texi \
				  part4.texi \
				  part5_dirty_tricks.texi \
				  part5_overview.texi \
				  part5_resources.texi \
				  part5.texi \
				  part5_trouble_shooting.texi \
				  part5_useful_functions.texi \
				  part6_images.texi \
				  part6.texi

html-local:
	if [ ! -e xforms.html ]; then  \
		mkdir xforms.html;         \
	fi
	cp -r images xforms.html
