include $(top_srcdir)/config/common.am

EXTRA_DIST = \
	flsnprintf.h \
	flvasprintf.h \
	pbrowser.h \
	pcanvas.h \
	pchoice.h \
	pcounter.h \
	pdial.h \
	pflps.h \
	pformbrowser.h \
	pinput.h \
	pmenu.h \
	pnmenu.h \
	ppositioner.h \
	pscrollbar.h \
	pselect.h \
	pslider.h \
	pspinner.h \
	ptbox.h \
	ptwheel.h \
	pvaluator.h \
	pxyplot.h
